# CalculatorApp

./: .gitignore  CMakeLists.txt  calculator.cpp  calculator.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  test_calculator.cpp
